extensions/ext_scanners.c
/* Generated by re2c 1.3 on Mon Jun 17 16:01:32 2024 */
#line 1 "extensions/ext_scanners.re"
#line 1 "extensions/ext_scanners.re"



#include <stdlib.h>
#include "ext_scanners.h"

bufsize_t _ext_scan_at(bufsize_t (*scanner)(const unsigned char *), unsigned char *ptr, int len, bufsize_t offset)
{
	bufsize_t res;

        if (ptr == NULL || offset >= len) {
          return 0;
        } else {
	  unsigned char lim = ptr[len];

	  ptr[len] = '\0';
	  res = scanner(ptr + offset);
	  ptr[len] = lim;
        }

	return res;
}

#line 42 "extensions/ext_scanners.re"


bufsize_t _scan_table_start(const unsigned char *p)
{
  const unsigned char *marker = NULL;
  const unsigned char *start = p;
  
#line 36 "<stdout>"
{
  unsigned char yych;
  yych = *p;
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':
  case '|':  goto yy4;
  case '-':  goto yy5;
  case ':':  goto yy6;
  default:  goto yy2;
  }
yy2:
  ++p;
yy3:
#line 52 "extensions/ext_scanners.re"
  { return 0; }
#line 55 "<stdout>"
yy4:
  yych = *(marker = ++p);
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy7;
  case '-':  goto yy10;
  case ':':  goto yy12;
  default:  goto yy3;
  }
yy5:
  yych = *(marker = ++p);
  switch (yych) {
  case '\t':
  case '\n':
  case '\v':
  case '\f':
  case '\r':
  case ' ':
  case '|':  goto yy14;
  case '-':  goto yy10;
  case ':':  goto yy13;
  default:  goto yy3;
  }
yy6:
  yych = *(marker = ++p);
  switch (yych) {
  case '-':  goto yy10;
  default:  goto yy3;
  }
yy7:
  yych = *++p;
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy7;
  case '-':  goto yy10;
  case ':':  goto yy12;
  default:  goto yy9;
  }
yy9:
  p = marker;
  goto yy3;
yy10:
  yych = *++p;
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':
  case ':':  goto yy13;
  case '\n':  goto yy15;
  case '\r':  goto yy17;
  case '-':  goto yy10;
  case '|':  goto yy18;
  default:  goto yy9;
  }
yy12:
  yych = *++p;
  switch (yych) {
  case '-':  goto yy10;
  default:  goto yy9;
  }
yy13:
  yych = *++p;
yy14:
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy13;
  case '\n':  goto yy15;
  case '\r':  goto yy17;
  case '|':  goto yy18;
  default:  goto yy9;
  }
yy15:
  ++p;
#line 49 "extensions/ext_scanners.re"
  {
      return (bufsize_t)(p - start);
    }
#line 140 "<stdout>"
yy17:
  yych = *++p;
  switch (yych) {
  case '\n':  goto yy15;
  default:  goto yy9;
  }
yy18:
  yych = *++p;
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy18;
  case '\n':  goto yy15;
  case '\r':  goto yy17;
  case '-':  goto yy10;
  case ':':  goto yy12;
  default:  goto yy9;
  }
}
#line 53 "extensions/ext_scanners.re"

}

bufsize_t _scan_table_cell(const unsigned char *p)
{
  const unsigned char *marker = NULL;
  const unsigned char *start = p;
  
#line 170 "<stdout>"
{
  unsigned char yych;
  yych = *p;
  switch (yych) {
  case '\n':
  case '\r':
  case '|':  goto yy25;
  case '\\':  goto yy27;
  default:  goto yy22;
  }
yy22:
  yych = *++p;
  switch (yych) {
  case '\n':
  case '\r':
  case '|':  goto yy24;
  case '\\':  goto yy27;
  default:  goto yy22;
  }
yy24:
#line 64 "extensions/ext_scanners.re"
  { return (bufsize_t)(p - start); }
#line 193 "<stdout>"
yy25:
  ++p;
#line 65 "extensions/ext_scanners.re"
  { return 0; }
#line 198 "<stdout>"
yy27:
  yych = *++p;
  switch (yych) {
  case '\n':
  case '\r':  goto yy24;
  case '\\':  goto yy27;
  default:  goto yy22;
  }
}
#line 66 "extensions/ext_scanners.re"

}

bufsize_t _scan_table_cell_end(const unsigned char *p)
{
  const unsigned char *start = p;
  
#line 216 "<stdout>"
{
  unsigned char yych;
  yych = *p;
  switch (yych) {
  case '|':  goto yy33;
  default:  goto yy31;
  }
yy31:
  ++p;
#line 74 "extensions/ext_scanners.re"
  { return 0; }
#line 228 "<stdout>"
yy33:
  yych = *++p;
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy33;
  default:  goto yy35;
  }
yy35:
#line 73 "extensions/ext_scanners.re"
  { return (bufsize_t)(p - start); }
#line 241 "<stdout>"
}
#line 75 "extensions/ext_scanners.re"

}

bufsize_t _scan_table_row_end(const unsigned char *p)
{
  const unsigned char *marker = NULL;
  const unsigned char *start = p;
  
#line 252 "<stdout>"
{
  unsigned char yych;
  yych = *p;
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy40;
  case '\n':  goto yy41;
  case '\r':  goto yy43;
  default:  goto yy38;
  }
yy38:
  ++p;
yy39:
#line 84 "extensions/ext_scanners.re"
  { return 0; }
#line 270 "<stdout>"
yy40:
  yych = *(marker = ++p);
  switch (yych) {
  case '\t':
  case '\n':
  case '\v':
  case '\f':
  case '\r':
  case ' ':  goto yy45;
  default:  goto yy39;
  }
yy41:
  ++p;
#line 83 "extensions/ext_scanners.re"
  { return (bufsize_t)(p - start); }
#line 286 "<stdout>"
yy43:
  yych = *++p;
  switch (yych) {
  case '\n':  goto yy41;
  default:  goto yy39;
  }
yy44:
  yych = *++p;
yy45:
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy44;
  case '\n':  goto yy41;
  case '\r':  goto yy47;
  default:  goto yy46;
  }
yy46:
  p = marker;
  goto yy39;
yy47:
  yych = *++p;
  switch (yych) {
  case '\n':  goto yy41;
  default:  goto yy46;
  }
}
#line 85 "extensions/ext_scanners.re"

}

bufsize_t _scan_tasklist(const unsigned char *p)
{
  const unsigned char *marker = NULL;
  const unsigned char *start = p;
  
#line 324 "<stdout>"
{
  unsigned char yych;
  yych = *p;
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy52;
  case '*':
  case '+':
  case '-':  goto yy53;
  case '0':
  case '1':
  case '2':
  case '3':
  case '4':
  case '5':
  case '6':
  case '7':
  case '8':
  case '9':  goto yy54;
  default:  goto yy50;
  }
yy50:
  ++p;
yy51:
#line 94 "extensions/ext_scanners.re"
  { return 0; }
#line 353 "<stdout>"
yy52:
  yych = *(marker = ++p);
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy55;
  case '*':
  case '+':
  case '-':  goto yy58;
  case '0':
  case '1':
  case '2':
  case '3':
  case '4':
  case '5':
  case '6':
  case '7':
  case '8':
  case '9':  goto yy59;
  default:  goto yy51;
  }
yy53:
  yych = *(marker = ++p);
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy60;
  default:  goto yy51;
  }
yy54:
  yych = *(marker = ++p);
  switch (yych) {
  case '\n':  goto yy51;
  case '0':
  case '1':
  case '2':
  case '3':
  case '4':
  case '5':
  case '6':
  case '7':
  case '8':
  case '9':  goto yy62;
  default:  goto yy58;
  }
yy55:
  yych = *++p;
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy55;
  case '*':
  case '+':
  case '-':  goto yy58;
  case '0':
  case '1':
  case '2':
  case '3':
  case '4':
  case '5':
  case '6':
  case '7':
  case '8':
  case '9':  goto yy59;
  default:  goto yy57;
  }
yy57:
  p = marker;
  goto yy51;
yy58:
  yych = *++p;
  switch (yych) {
  case '[':  goto yy57;
  default:  goto yy61;
  }
yy59:
  yych = *++p;
  switch (yych) {
  case '\n':  goto yy57;
  case '0':
  case '1':
  case '2':
  case '3':
  case '4':
  case '5':
  case '6':
  case '7':
  case '8':
  case '9':  goto yy62;
  default:  goto yy58;
  }
yy60:
  yych = *++p;
yy61:
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy60;
  case '[':  goto yy64;
  default:  goto yy57;
  }
yy62:
  yych = *++p;
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy60;
  case '\n':  goto yy57;
  case '0':
  case '1':
  case '2':
  case '3':
  case '4':
  case '5':
  case '6':
  case '7':
  case '8':
  case '9':  goto yy62;
  default:  goto yy58;
  }
yy64:
  yych = *++p;
  switch (yych) {
  case ' ':
  case 'x':  goto yy65;
  default:  goto yy57;
  }
yy65:
  yych = *++p;
  switch (yych) {
  case ']':  goto yy66;
  default:  goto yy57;
  }
yy66:
  yych = *++p;
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy67;
  default:  goto yy57;
  }
yy67:
  yych = *++p;
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy67;
  default:  goto yy69;
  }
yy69:
#line 93 "extensions/ext_scanners.re"
  { return (bufsize_t)(p - start); }
#line 513 "<stdout>"
}
#line 95 "extensions/ext_scanners.re"

}

bufsize_t _scan_math_start(const unsigned char *p)
{
  const unsigned char *marker = NULL;
  const unsigned char *start = p;
  
#line 524 "<stdout>"
{
  unsigned char yych;
  yych = *p;
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy74;
  case '\\':  goto yy75;
  default:  goto yy72;
  }
yy72:
  ++p;
yy73:
#line 104 "extensions/ext_scanners.re"
  { return 0; }
#line 541 "<stdout>"
yy74:
  yych = *(marker = ++p);
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy76;
  case '\\':  goto yy79;
  default:  goto yy73;
  }
yy75:
  yych = *++p;
  switch (yych) {
  case '(':
  case '[':  goto yy80;
  default:  goto yy73;
  }
yy76:
  yych = *++p;
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy76;
  case '\\':  goto yy79;
  default:  goto yy78;
  }
yy78:
  p = marker;
  goto yy73;
yy79:
  yych = *++p;
  switch (yych) {
  case '(':
  case '[':  goto yy80;
  default:  goto yy78;
  }
yy80:
  ++p;
#line 103 "extensions/ext_scanners.re"
  { return (bufsize_t)(p - start); }
#line 583 "<stdout>"
}
#line 105 "extensions/ext_scanners.re"

}

bufsize_t _scan_math_end(const unsigned char *p)
{
  const unsigned char *marker = NULL;
  const unsigned char *start = p;
  
#line 594 "<stdout>"
{
  unsigned char yych;
  unsigned int yyaccept = 0;
  yych = *p;
  switch (yych) {
  case '\n':  goto yy86;
  case '\\':  goto yy87;
  default:  goto yy84;
  }
yy84:
  yyaccept = 0;
  yych = *(marker = ++p);
  switch (yych) {
  case '\n':  goto yy85;
  default:  goto yy89;
  }
yy85:
#line 114 "extensions/ext_scanners.re"
  { return 0; }
#line 614 "<stdout>"
yy86:
  ++p;
  goto yy85;
yy87:
  yyaccept = 0;
  yych = *(marker = ++p);
  switch (yych) {
  case '\n':  goto yy85;
  case ')':
  case ']':  goto yy93;
  default:  goto yy89;
  }
yy88:
  yych = *++p;
yy89:
  switch (yych) {
  case '\n':  goto yy90;
  case '\\':  goto yy91;
  default:  goto yy88;
  }
yy90:
  p = marker;
  if (yyaccept == 0) {
    goto yy85;
  } else {
    goto yy95;
  }
yy91:
  yych = *++p;
  switch (yych) {
  case '\n':  goto yy90;
  case ')':
  case ']':  goto yy93;
  case '\\':  goto yy91;
  default:  goto yy88;
  }
yy93:
  yyaccept = 1;
  yych = *(marker = ++p);
  switch (yych) {
  case '\t':
  case '\v':
  case '\f':
  case ' ':  goto yy93;
  case '\n':  goto yy95;
  case '\\':  goto yy91;
  default:  goto yy88;
  }
yy95:
#line 113 "extensions/ext_scanners.re"
  { return (bufsize_t)(p - start); }
#line 666 "<stdout>"
}
#line 115 "extensions/ext_scanners.re"

}
